logs/wille.log
Listing '.'...
Listing './bin'...
Compiling './bin/wille-admin.py'...
***   File "./bin/wille-admin.py", line 113
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/wille-server.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/feedparser-5.2.1.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyjavaproperties-0.6.egg-info'...
Compiling './lib/python3.5/site-packages/pyjavaproperties.py'...
***   File "./lib/python3.5/site-packages/pyjavaproperties.py", line 238
    raise TypeError,'Argument should be a file object!'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/zipblob-test.py'...
***   File "./lib/python3.5/site-packages/tests/zipblob-test.py", line 16
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wille'...
Compiling './lib/python3.5/site-packages/wille/app.py'...
***   File "./lib/python3.5/site-packages/wille/app.py", line 85
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wille/commandline.py'...
***   File "./lib/python3.5/site-packages/wille/commandline.py", line 115
    print result.data
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wille/server.py'...
***   File "./lib/python3.5/site-packages/wille/server.py", line 269
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wille/services.py'...
***   File "./lib/python3.5/site-packages/wille/services.py", line 178
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wille/utils'...
Compiling './lib/python3.5/site-packages/wille/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/wille/utils/__init__.py", line 88
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wille/utils/template.py'...
***   File "./lib/python3.5/site-packages/wille/utils/template.py", line 64
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wille/views.py'...
***   File "./lib/python3.5/site-packages/wille/views.py", line 169
    print shared_path
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wille/zipblob.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (zipblob.py, line 148)
Listing './lib/python3.5/site-packages/wille-2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
